# ha-droplet

./: .devcontainer.json  .repo-sync.yaml  CLAUDE.md  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: lint.yml  release.yml  test.yml  validate.yml
custom_components/droplet/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_trigger.py  diagnostics.py  event.py  helpers.py  icons.json  manifest.json  number.py  quality_scale.yaml  repairs.py  sensor.py  strings.json
custom_components/droplet/translations/: en.json  et.json  it.json  pt.json  sv.json
custom_components/droplet_plus/: const.py  helpers.py  manifest.json  quality_scale.yaml
custom_components/droplet_plus/translations/: de.json  es.json  fi.json  fr.json  nb.json
docs/releases/: README.md  v0.1.0-beta.1.md
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_event.py  test_helpers.py  test_init.py  test_number.py  test_repairs.py  test_sensor.py
