[project]
name = "ha-droplet"
version = "0.1.0"
description = "Home Assistant custom integration for Droplet"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "alexdelprete" }]

[project.urls]
"Homepage" = "https://github.com/alexdelprete/ha-droplet"
"Bug Tracker" = "https://github.com/alexdelprete/ha-droplet/issues"

[project.optional-dependencies]
dev = [
    "homeassistant>=2024.12.0",
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "mypy",
    "pre-commit",
    "pymarkdownlnt",
    "ruff>=0.8.0",
    "ty",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]

[dependency-groups]
lint = [
    "homeassistant-stubs",
    "mdformat",
    "mdformat-gfm",
    "mypy",
    "pre-commit",
    "pymarkdownlnt",
    "ruff>=0.8.0",
    "ty",
]
pytest = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov",
    "pytest-homeassistant-custom-component>=0.13.0",
    "pytest-timeout",
]
dev = [
    "homeassistant>=2024.12.0",
    { include-group = "lint" },
    { include-group = "pytest" },
]

# <!-- BEGIN SHARED:repo-sync -->
# <!-- END SHARED:repo-sync -->
